@@ -1,3 +1,11 @@
+## 20210428
+
+- istio版本升级到1.9.4
+- k3s版本调整为1.18.18+k3s1
+- k0s版本升级为0.13.1
+- k0sctl版本升级为0.8.2
+- critools版本升级为1.21.0
+
 ## 20210423
 - k8s版本升级为1.18.18
 - helmv3版本升级为3.5.4
